classDiagram

    class UserBase {
        email: str
        first_name: str | None = None
        last_name: str | None = None
        is_active: bool | None = True
    }

    class UserCreate {
        email: str
        first_name: str | None = None
        last_name: str | None = None
        is_active: bool | None = True
        password: str
    }

    class UserPreferencesUpdate {
        dietary_preferences: list[str] | None = None
        allergens: list[str] | None = None
        nutrition_targets: dict[str, Any] | None = None
    }

    class UserResponse {
        email: str
        first_name: str | None = None
        last_name: str | None = None
        is_active: bool | None = True
        id: str
        created_at: datetime
        dietary_preferences: list[str] | None = None
        allergens: list[str] | None = None
        nutrition_targets: dict[str, Any] | None = None
    }

    class UserUpdate {
        email: str | None = None
        password: str | None = None
        first_name: str | None = None
        last_name: str | None = None
    }

    UserPreferencesUpdate ..> Any
    UserResponse ..> Any
    UserResponse ..> datetime

